[APP-2776] Use click lib for CLI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,12 @@ documentation = "https://github.com/datarobot/streamlit-sal"
 include = ["README.md", "LICENSE", "streamlit_sal/**"]
 
 [tool.poetry.scripts]
-streamlit-sal = "streamlit_sal.scripts.cli:main"
+streamlit-sal = "streamlit_sal.scripts.cli:cli"
 
 [tool.poetry.dependencies]
 python = "!=3.9.7,>=3.8"
 streamlit = "1.35.0"
+click = "^8.1.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
