--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "streamlit-sal"
 version = "0.0.1"
-description = "Style and layout for your Streamlit app using LESS"
+description = "Style and layout for your Streamlit app using SASS"
 authors = ["DataRobot Developers <apps-devs@datarobot.com>"]
 license = "MIT"
 readme = "README.md"
@@ -17,6 +17,7 @@ streamlit-sal = "streamlit_sal.scripts.cli:cli"
 python = "!=3.9.7,>=3.8"
 streamlit = "1.35.0"
 click = "^8.1.7"
+libsass = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
