--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "streamlit-sal"
-version = "0.1.3"
+version = "0.1.5"
 description = "Style and layout for your Streamlit app using SASS"
-authors = ["DataRobot Developers <dev@datarobot.com>"]
+authors = ["DataRobot Applications Team <apps-oss@datarobot.com>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/datarobot/streamlit-sal"
-repository = "https://github.com/datarobot/streamlit-sal"
-documentation = "https://github.com/datarobot/streamlit-sal"
+homepage = "https://github.com/datarobot-oss/streamlit-sal"
+repository = "https://github.com/datarobot-oss/streamlit-sal"
+documentation = "https://github.com/datarobot-oss/streamlit-sal"
 include = ["README.md", "LICENSE", "streamlit_sal/**"]
 
 [tool.poetry.scripts]
